--- a/analise.ipynb
+++ b/analise.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -10,39 +10,9 @@
         "id": "uXRjCKEtn5V9",
         "outputId": "d62429e9-d093-4aff-b93b-c3db7bef41fc"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: pandas in ./.venv/lib/python3.12/site-packages (2.2.3)\n",
-            "Requirement already satisfied: numpy in ./.venv/lib/python3.12/site-packages (2.2.3)\n",
-            "Requirement already satisfied: matplotlib in ./.venv/lib/python3.12/site-packages (3.10.0)\n",
-            "Requirement already satisfied: seaborn in ./.venv/lib/python3.12/site-packages (0.13.2)\n",
-            "Requirement already satisfied: plotly in ./.venv/lib/python3.12/site-packages (6.0.0)\n",
-            "Requirement already satisfied: scipy in ./.venv/lib/python3.12/site-packages (1.15.2)\n",
-            "Requirement already satisfied: scikit-learn in ./.venv/lib/python3.12/site-packages (1.6.1)\n",
-            "Requirement already satisfied: unidecode in ./.venv/lib/python3.12/site-packages (1.3.8)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in ./.venv/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in ./.venv/lib/python3.12/site-packages (from pandas) (2025.1)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib/python3.12/site-packages (from pandas) (2025.1)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.12/site-packages (from matplotlib) (1.3.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.12/site-packages (from matplotlib) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib/python3.12/site-packages (from matplotlib) (4.56.0)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib) (1.4.8)\n",
-            "Requirement already satisfied: packaging>=20.0 in ./.venv/lib/python3.12/site-packages (from matplotlib) (24.2)\n",
-            "Requirement already satisfied: pillow>=8 in ./.venv/lib/python3.12/site-packages (from matplotlib) (11.1.0)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib) (3.2.1)\n",
-            "Requirement already satisfied: narwhals>=1.15.1 in ./.venv/lib/python3.12/site-packages (from plotly) (1.27.1)\n",
-            "Requirement already satisfied: joblib>=1.2.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn) (1.4.2)\n",
-            "Requirement already satisfied: threadpoolctl>=3.1.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n",
-            "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "%pip install pandas numpy matplotlib seaborn plotly scipy scikit-learn unidecode statsmodels"
+        "#%pip install pandas numpy matplotlib seaborn plotly scipy scikit-learn unidecode statsmodels"
       ]
     },
     {
@@ -54,11 +24,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 2,
       "metadata": {
         "id": "Hdq0VvSXn5V_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/luanpereiradelimabrasil/personal/unifor/g707_top_mineracao_dados/trabalho/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "from glob import glob\n",
@@ -90,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "ezF3_LNs2YnS"
       },
@@ -111,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -124,16 +103,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "./dados/chegadas_2024.csv\n",
-            "./dados/chegadas_2018.csv\n",
-            "./dados/chegadas_2019.csv\n",
-            "./dados/chegadas_2021.csv\n",
-            "./dados/chegadas_2020.csv\n",
-            "./dados/chegadas_2022.csv\n",
-            "./dados/chegadas_2023.csv\n",
-            "./dados/chegadas_2015.csv\n",
-            "./dados/chegadas_2017.csv\n",
-            "./dados/chegadas_2016.csv\n"
+            "./data/chegadas_2024.csv\n",
+            "./data/chegadas_2018.csv\n",
+            "./data/chegadas_2019.csv\n",
+            "./data/chegadas_2021.csv\n",
+            "./data/chegadas_2020.csv\n",
+            "./data/chegadas_2022.csv\n",
+            "./data/chegadas_2023.csv\n",
+            "./data/chegadas_2015.csv\n",
+            "./data/chegadas_2017.csv\n",
+            "./data/chegadas_2016.csv\n"
           ]
         }
       ],
@@ -172,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "NxSS2QMtn5WA"
       },
@@ -215,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4694,7 +4673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -4730,7 +4709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -4755,7 +4734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -5784,6 +5763,13 @@
         "\n",
         "fig.show()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
